# kodec2

./: .gitignore  .gitmodules  build.gradle  deploy.sh  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle  publish.gradle
lib/src/androidTest/java/com/beartooth/kodec2/: ExampleInstrumentedTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  codec2_jni.c  gen-codebooks.sh
lib/src/main/java/com/beartooth/kodec2/: Codec2.kt
lib/src/main/res/values/: strings.xml
lib/src/test/java/com/beartooth/kodec2/: ExampleUnitTest.kt
